fixing overflow on chat dropdown

--- a/less/header.less
+++ b/less/header.less
@@ -106,11 +106,15 @@
 		#notif-list;
 
 		li {
-			width: auto;
+			width: 200px;
 
-			a img {
-				width: 32px;
-				margin-right: 1em;
+			a {
+				white-space: nowrap;
+
+				img {
+					width: 32px;
+					margin-right: 1em;
+				}
 			}
 		}
 	}
